--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Welcome to My Website</h1>
         <nav>
             <a href="index.html" class="btn">Home</a>
-            <a href="about.html" class="btn">About Us</a>
+            <a href="about page.html" class="btn">About Us</a>
             <a href="contact.html" class="btn">Contact Us</a>
         </nav>
     </header>
